add /schedule_settings command

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -47,4 +47,7 @@ settings.schedule.spd.ask=Сколько раз в день вы готовы в
   Сейчас это нужно для сбора данных, поэтому большее количество сообщений поможет быстрее накопить датасет.
 settings.schedule.spd.wrong_format=Введите, пожалуйста, число (например, 3)
 
+
+settings.success=Настройки успешно применены😄
+
 utils.skip_button=Пропустить
