--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,7 +1,13 @@
-registration.start.hello=Добро пожаловать в бот компании 3DiVi! \
-  Я здесь, чтобы помочь вам оценить и развить ваши профессиональные навыки. \
-  Пройдите тесты, получите обратную связь и станьте еще более квалифицированным специалистом. \
-  Начнем?\n(✿◠‿◠)
+registration.start.hello=Привет! 👋\n\n\
+  Я создаю дипломный проект — бота, который в будущем сможет сам подбирать самое удобное время для отправки сообщений. \n\
+  Чтобы научить его этому, сейчас мне нужно собрать данные о том, как люди общаются с ботом. \
+  Буду очень признателен, если вы поможете мне в этом! 😊 \n\n\
+  В ближайшее время бот будет писать вам несколько раз в день, а ваша задача — просто отвечать на сообщения. \
+  Не переживайте, если не знаете, что ответить на какой-нибудь вопрос — \
+  главное, напишите хоть что-то: смайлик, слово или короткую фразу. \n\n\
+  Не отключайте уведомления и отвечайте, когда удобно. \
+  Чем больше вдумчивых ответов вы дадите, тем лучше получится итоговый бот! \n\n\
+  Начнем? (✿◠‿◠)
 registration.start.confirm_button=Поехали
 registration.start.confirmed=Хорошо, давай начнем
 
@@ -43,9 +49,8 @@ settings.schedule.hours.option.work_day=С 9:00 до 18:00
 settings.schedule.hours.wrong_format=Пожалуйста, введи время в формате ЧЧ-ЧЧ (например, 09-18)
 
 settings.schedule.spd.ask=Сколько раз в день вы готовы взаимодействовать с ботом? 🔔\n\
-  Рекомендуемое значение: 3.\n\
-  Сейчас это нужно для сбора данных, поэтому большее количество сообщений поможет быстрее накопить датасет.
-settings.schedule.spd.wrong_format=Введите, пожалуйста, число (например, 3)
+  Рекомендуемое значение: 3
+settings.schedule.spd.wrong_format=Введите, пожалуйста, число больше 0 (например, 3)
 
 
 settings.success=Настройки успешно применены😄
