--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,39 +17,39 @@ registration.password.correct=Отлично, можем продолжить \n
 registration.password.incorrect=Неверный пароль \n(ง ͠▧. ͡▧)ง
 
 
-registration.user.name.ask=Как тебя зовут? 😊
+registration.user.name.ask=Как тебя зовут?
 
-registration.user.age.ask=Сколько тебе лет? 😉
-registration.user.age.wrong_type=Введи число, пожалуйста, 😄
+registration.user.age.ask=Сколько тебе лет?
+registration.user.age.wrong_type=Введи число, пожалуйста
 
-registration.user.email.ask=Оставь, пожалуйста, свою почту ✉️
-registration.user.email.wrong_type=Неправильный email 🙁
+registration.user.email.ask=Оставь, пожалуйста, свою почту
+registration.user.email.wrong_type=Неправильный email
 
-registration.user.city.ask=А из какого ты города? 🌍
-registration.user.hobby.ask=Расскажи немного о своих интересах ✨
+registration.user.city.ask=А из какого ты города?
+registration.user.hobby.ask=Расскажи немного о своих интересах
 
 registration.finish.success=Регистрация прошла успешно ✅\nРад тебя видеть здесь 🤗
 
 
 settings.schedule.start=Почти готово! 🎉\n\
-  Осталось уточнить пару важных моментов, чтобы сообщения приходили в подходящее для тебя время
+  Осталось уточнить пару важных моментов, чтобы сообщения приходили в подходящее для тебя время 🔔
 
-settings.schedule.timezone.ask=Выбери свой часовой пояс\n\
-  Если твоего города нет в списке — напиши вручную в формате UTC+X (например, UTC+4)
+settings.schedule.timezone.ask=*Выбери свой часовой пояс*\n\n\
+  _Если твоего города нет в списке — напиши вручную в формате UTC+X (например, UTC+4)_
 settings.schedule.timezone.option.moscow=UTC+3 (Москва)
 settings.schedule.timezone.option.ekaterinburg=UTC+5 (Екатеринбург)
 settings.schedule.timezone.option.krasnoyarsk=UTC+7 (Красноярск)
 settings.schedule.timezone.wrong_format=Пожалуйста, введи в формате UTC+X (например, UTC+6)
 
-settings.schedule.hours.ask=Выбери время, когда мне можно отправлять тебе сообщения ⏰\n\
-  Если ни один вариант не подходит — напиши свой диапазон в формате ЧЧ-ЧЧ (например, 08-18)
+settings.schedule.hours.ask=*Выбери время, когда мне можно отправлять тебе сообщения*\n\n\
+  _Если ни один вариант не подходит — напиши свой диапазон в формате ЧЧ-ЧЧ (например, 08-18)_
 settings.schedule.hours.option.all_day=Круглые сутки (желательно)
 settings.schedule.hours.option.extended=С 9:00 до 23:00
 settings.schedule.hours.option.work_day=С 9:00 до 18:00
 settings.schedule.hours.wrong_format=Пожалуйста, введи время в формате ЧЧ-ЧЧ (например, 09-18)
 
-settings.schedule.spd.ask=Сколько раз в день вы готовы взаимодействовать с ботом? 🔔\n\
-  Рекомендуемое значение: 3
+settings.schedule.spd.ask=*Сколько раз в день вы готовы взаимодействовать с ботом?*\n\n\
+  _Рекомендуемое значение: 3_
 settings.schedule.spd.wrong_format=Введите, пожалуйста, число больше 0 (например, 3)
 
 
