add /help command

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,6 +12,16 @@ registration.start.confirm_button=Поехали
 registration.start.confirmed=Хорошо, давай начнем
 
 
+help=Привет, я бот, который помогает собрать данные для дипломного проекта! \
+  Моя цель — научиться отправлять сообщения в самое удобное для вас время.\n\
+  Чтобы это получилось, пожалуйста, отвечайте на мои сообщения, когда вам удобно. \
+  Не переживайте, если не знаете, что сказать — достаточно слова или короткой фразы. \n\n\
+  *Доступные команды*:\n\
+  /schedule\\_settings — Изменить настройки расписания (часовой пояс, время и частоту сообщений).\n\
+  /update\\_user — Обновить ваши данные (имя, город, интересы и т.д.).\n\
+  /help — Показать это сообщение.
+
+
 registration.password.ask_message=Для продолжения необходимо ввести пароль
 registration.password.correct=Отлично, можем продолжить \n(っ◔◡◔)っ❤
 registration.password.incorrect=Неверный пароль \n(ง ͠▧. ͡▧)ง
