--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -60,7 +60,7 @@ settings.schedule.hours.wrong_format=Пожалуйста, введи время
 
 settings.schedule.spd.ask=*Сколько раз в день вы готовы взаимодействовать с ботом?*\n\n\
   _Рекомендуемое значение: 3_
-settings.schedule.spd.wrong_format=Введите, пожалуйста, число больше 0 (например, 3)
+settings.schedule.spd.wrong_format=Введите, пожалуйста, число не меньше 0 (например, 3)
 
 
 settings.success=Настройки успешно применены😄
